# emoji-win

./: .gitignore  ADVANCED_PERMISSIONS.md  LICENSE  MONOREPO_README.md  README.md  RELEASE_TEMPLATE.md  TROUBLESHOOTING.md  convert.sh  emoji-win.bat  emoji-win.py  emoji-win.sh  main.py  pyproject.toml  windows_font_manager.bat
converter/: README.md  convert.sh  main.py  pyproject.toml
converter/emoji_win/: __init__.py  bitmap_processor.py  cli.py  font_converter.py  font_diagnostics.py  interactive_cli.py  terminal_cleaner.py  terminal_cleaner_v2.py
converter/tests/: test_terminal_cleaner.py  test_terminal_cleaner_v2.py
directwrite-test/: README.md
python-converter/: pyproject.toml
python-converter/emoji_win/: __main__.py  bitmap_processor.py  cli.py  font_converter.py
