[project]
name = "apple-emoji-windows-converter"
version = "1.0.0"
description = "Convert Apple Color Emoji fonts to be fully compatible with Windows 11"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fonttools>=4.0.0"
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["font", "emoji", "windows", "apple", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: System :: Fonts",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/yourusername/apple-emoji-windows-converter"
Repository = "https://github.com/yourusername/apple-emoji-windows-converter"
Issues = "https://github.com/yourusername/apple-emoji-windows-converter/issues"


